[gd_scene load_steps=12 format=3 uid="uid://bx2vjq8qx5kfh"]

[ext_resource type="Script" path="res://entities/monster/monster_base.gd" id="1"]
[ext_resource type="Script" path="res://entities/monster/components/health_component.gd" id="2"]
[ext_resource type="Script" path="res://entities/monster/components/stamina_component.gd" id="3"]
[ext_resource type="Script" path="res://entities/monster/components/stress_component.gd" id="4"]
[ext_resource type="Script" path="res://entities/monster/components/movement_component.gd" id="5"]
[ext_resource type="Script" path="res://entities/monster/components/combat_component.gd" id="6"]
[ext_resource type="Script" path="res://entities/monster/components/job_component.gd" id="7"]
[ext_resource type="Script" path="res://systems/combat/threat_component.gd" id="8"]
[ext_resource type="Script" path="res://systems/combat/combat_ai_component.gd" id="9"]
[ext_resource type="Script" path="res://entities/monster/components/needs_component.gd" id="10"]
[ext_resource type="Script" path="res://systems/farm/farm_ai_component.gd" id="11"]

[node name="Monster" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 10.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")

[node name="StaminaComponent" type="Node" parent="."]
script = ExtResource("3")

[node name="StressComponent" type="Node" parent="."]
script = ExtResource("4")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("5")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("6")

[node name="JobComponent" type="Node" parent="."]
script = ExtResource("7")

[node name="ThreatComponent" type="Node" parent="."]
script = ExtResource("8")

[node name="CombatAIComponent" type="Node" parent="."]
script = ExtResource("9")

[node name="NeedsComponent" type="Node" parent="."]
script = ExtResource("10")

[node name="FarmAIComponent" type="Node" parent="."]
script = ExtResource("11")

[node name="SelectionIndicator" type="Sprite2D" parent="."]
visible = false
z_index = -1

